changed to scanner & added operations